--- a/AZDORestApiExplorer.Git/AZDORestApiExplorer.Git.csproj
+++ b/AZDORestApiExplorer.Git/AZDORestApiExplorer.Git.csproj
@@ -8,7 +8,7 @@
 
   <ItemGroup>
     <Folder Include="DomainServices\Interfaces\" />
-    <Folder Include="Presentation\ModelWrappers\" />
+    <Folder Include="Presentation\ViewModels\" />
   </ItemGroup>
 
     <ItemGroup>
