--- a/AZDORestApiExplorer.Build/AZDORestApiExplorer.Build.csproj
+++ b/AZDORestApiExplorer.Build/AZDORestApiExplorer.Build.csproj
@@ -27,5 +27,12 @@
         <!-- Workaround for https://github.com/dotnet/wpf/issues/2648#issuecomment-635674683 -->
         <Reference Include="System.Web" />
     </ItemGroup>
+
+    <ItemGroup>
+      <Page Update="Presentation\Views\TagMain.xaml">
+        <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
+        <SubType>Designer</SubType>
+      </Page>
+    </ItemGroup>
     
 </Project>
