--- a/AZDORestApiExplorer.Domain/AZDORestApiExplorer.Domain.csproj
+++ b/AZDORestApiExplorer.Domain/AZDORestApiExplorer.Domain.csproj
@@ -1,8 +1,8 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-      <TargetFrameworks>net5-windows10.0.17763.0;net48</TargetFrameworks>
-      <!--<TargetFrameworks>net5.0-windows;net48</TargetFrameworks>-->
+      <!--<TargetFrameworks>net5-windows10.0.17763.0;net48</TargetFrameworks>-->
+      <TargetFrameworks>net5.0-windows;net48</TargetFrameworks>
       <UseWPF>true</UseWPF>
     <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
   </PropertyGroup>
