--- a/AZDORestApiExplorer/AZDORestApiExplorer.csproj
+++ b/AZDORestApiExplorer/AZDORestApiExplorer.csproj
@@ -2,8 +2,9 @@
 
     <PropertyGroup>
         <OutputType>WinExe</OutputType>
-        <TargetFrameworks>net5-windows10.0.17763.0;net48</TargetFrameworks>
-        <!--<TargetFrameworks>net5.0-windows;net48</TargetFrameworks>-->
+        <!--<TargetFrameworks>net5-windows10.0.17763.0;net48</TargetFrameworks>-->
+        <TargetFrameworks>net5.0-windows;net48</TargetFrameworks>
+        <LangVersion>latest</LangVersion>
         <UseWPF>true</UseWPF>
         <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
         <ApplicationIcon>Resources\Icons\application.ico</ApplicationIcon>
