--- a/AZDORestApiExplorer.Presentation/AZDORestApiExplorer.Presentation.csproj
+++ b/AZDORestApiExplorer.Presentation/AZDORestApiExplorer.Presentation.csproj
@@ -2,6 +2,7 @@
 
   <PropertyGroup>
       <TargetFrameworks>net5.0-windows;net48</TargetFrameworks>
+      <LangVersion>latest</LangVersion>      
     <UseWPF>true</UseWPF>
       <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
   </PropertyGroup>
